--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,7 +46,8 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
   get: ^4.6.5
-
+  get_storage: ^2.0.3
+  equatable: ^2.0.5
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
