--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,9 @@ dev_dependencies:
   get_storage: ^2.0.3
   equatable: ^2.0.5
   flutter_easyloading: ^3.0.5
+  dotted_border: ^2.0.0+3
+
+  step_progress_indicator: ^1.0.2  
   dependencies:
   
 
